[package]
name = "wasm-lib"
version = "0.1.0"
authors = ["behemoth"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.67"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.3"
wasm-bindgen = {version =  "0.2.84"}
gloo-console = { version = "0.3.0"}
web-sys = { version = "0.3.66", features = ["console"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
hypergraph = "2.1.2"
supercluster-rs = { path = "src/supercluster-rs" }
geo = "0.28.0"
geo-types = "0.7.13"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
